--- a/templates/addnews.html
+++ b/templates/addnews.html
@@ -116,6 +116,7 @@
                 <div class="container">
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
+                        {{ form.media }}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary btn-lg shadow rounded">Publish News</button>
                     </form>
