--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 <html lang="zxx">
 <head>
     <meta charset="utf-8" />
-    <title>Justica - Lawyer and Attorney Website Template</title>
+    <title>Justica - Lawyer and Attorney</title>
     <link rel="icon" href="{% static 'images/icon.png' %}" type="image/gif" sizes="16x16">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Justica - Lawyer and Attorney Website Template" name="description" />
